WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.h

typedef void (CALLBACK* F_CMD_MOUSEDOWN)(HANDLE hCmd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
typedef void (CALLBACK* F_CMD_MOUSEUP)  (HANDLE hCmd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
typedef void (CALLBACK* F_CMD_MOUSEMOVE)(HANDLE hCmd, HDC hDC, int Flags, int Xwin, int Ywin, double X, double Y);
typedef void (CALLBACK* F_CMD_STRING)   (HANDLE hCmd, LPCWSTR szStr);
typedef void (CALLBACK* F_ADDENTITY)    (HANDLE hDrw, HANDLE hBlock, HANDLE hEntity);
typedef void (CALLBACK* F_REGEN)        (HANDLE hDrw, HANDLE hView, int Percent);
typedef void (CALLBACK* F_FIOPROGRESS)  (HANDLE hDrw, int Mode, int IntVal, LPCWSTR szFileName);
typedef void (CALLBACK* F_SELECTION)    (HANDLE hDrw, HANDLE hBlock, BOOL bSelect, int nEnts, HANDLE hEnt, int nTotal);
typedef void (CALLBACK* F_PROPCHANGED)  (HANDLE hDrw, int idProp, HANDLE hObj);
typedef void (CALLBACK* F_GRIPSELECT)   (HANDLE hEnt, int iGrip, double X, double Y);
typedef void (CALLBACK* F_GRIPMOVE)     (HANDLE hEnt, int iGrip, double* pX, double* pY, double* pAngle, bool bDrag);
typedef void (CALLBACK* F_ENTERASE)     (HANDLE hEnt);
typedef void (CALLBACK* F_ENTMOVE)      (HANDLE hEnt, double DX, double DY, bool bDrag);
typedef void (CALLBACK* F_ENTROTATE)    (HANDLE hEnt, double X0, double Y0, double Angle, bool bDrag);
typedef void (CALLBACK* F_ENTSCALE)     (HANDLE hEnt, double X0, double Y0, double Scal, bool bDrag);
typedef void (CALLBACK* F_ENTMIRROR)    (HANDLE hEnt, double X1, double Y1, double X2, double Y2, bool bDrag);
typedef void (CALLBACK* F_ENTPROP)      (HANDLE hEnt, int idProp);
typedef void (CALLBACK* F_FONTREPLACE)  (HANDLE hDrw, LPCWSTR szStyleName, LPCWSTR szOrigName);
typedef void (CALLBACK* F_ADDSTR)       ();
typedef void (CALLBACK* F_HELP)         (HANDLE hDrw, int idTopic);
    
void LCAPI lcOnEventCmdMouseDown (F_CMD_MOUSEDOWN pFunc);
 
void LCAPI lcOnEventCmdMouseUp   (F_CMD_MOUSEUP pFunc);
   
void LCAPI lcOnEventCmdMouseMove (F_CMD_MOUSEMOVE pFunc);
 
void LCAPI lcOnEventCmdString    (F_CMD_STRING pFunc);
void LCAPI lcOnEventAddEntity    (F_ADDENTITY pFunc);
 
void LCAPI lcOnEventRegen        (F_REGEN pFunc);
void LCAPI lcOnEventFioProgress  (F_FIOPROGRESS pFunc);
void LCAPI lcOnEventSelection    (F_SELECTION pFunc);
void LCAPI lcOnEventPropChanged  (F_PROPCHANGED pFunc);
void LCAPI lcOnEventGripSelect   (F_GRIPSELECT pFunc);
void LCAPI lcOnEventGripMove     (F_GRIPMOVE pFunc);
void LCAPI lcOnEventEntErase     (F_ENTERASE pFunc);
void LCAPI lcOnEventEntMove      (F_ENTMOVE pFunc);
void LCAPI lcOnEventEntRotate    (F_ENTROTATE pFunc);
void LCAPI lcOnEventEntScale     (F_ENTSCALE pFunc);
void LCAPI lcOnEventEntMirror    (F_ENTMIRROR pFunc);
void LCAPI lcOnEventEntProp      (F_ENTPROP pFunc);
void LCAPI lcOnEventHelp         (F_HELP pFunc);
void LCAPI lcOnEventAddStr       (F_ADDSTR pFunc);
void LCAPI lcOnEventFontReplace  (F_FONTREPLACE pFunc);