WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.vb


  Public Declare Sub OnEventCmdMouseDown Lib "Litecad.dll" Alias "lcOnEventCmdMouseDown" (pFunc As F_CMD_MOUSEDOWN)

  Public Declare Sub OnEventCmdMouseUp Lib "Litecad.dll" Alias "lcOnEventCmdMouseUp" (pFunc As F_CMD_MOUSEUP)

  Public Declare Sub OnEventCmdMouseMove Lib "Litecad.dll" Alias "lcOnEventCmdMouseMove" (pFunc As F_CMD_MOUSEMOVE)

  Public Declare Sub OnEventCmdString Lib "Litecad.dll" Alias "lcOnEventCmdString" (pFunc As F_CMD_STRING)

  Public Declare Sub OnEventAddEntity Lib "Litecad.dll" Alias "lcOnEventAddEntity" (pFunc As F_ADDENTITY)

  Public Declare Sub OnEventRegen Lib "Litecad.dll" Alias "lcOnEventRegen" (pFunc As F_REGEN)

  Public Declare Sub OnEventFioProgress Lib "Litecad.dll" Alias "lcOnEventFioProgress" (pFunc As F_FIOPROGRESS)

  Public Declare Sub OnEventSelection Lib "Litecad.dll" Alias "lcOnEventSelection" (pFunc As F_SELECTION)

  Public Declare Sub OnEventPropChanged Lib "Litecad.dll" Alias "lcOnEventPropChanged" (pFunc As F_PROPCHANGED)

  Public Declare Sub OnEventGripSelect Lib "Litecad.dll" Alias "lcOnEventGripSelect" (pFunc As F_GRIPSELECT)

  Public Declare Sub OnEventGripMove Lib "Litecad.dll" Alias "lcOnEventGripMove" (pFunc As F_GRIPMOVE)

  Public Declare Sub OnEventEntErase Lib "Litecad.dll" Alias "lcOnEventEntErase" (pFunc As F_ENTERASE)

  Public Declare Sub OnEventEntMove Lib "Litecad.dll" Alias "lcOnEventEntMove" (pFunc As F_ENTMOVE)

  Public Declare Sub OnEventEntRotate Lib "Litecad.dll" Alias "lcOnEventEntRotate" (pFunc As F_ENTROTATE)

  Public Declare Sub OnEventEntScale Lib "Litecad.dll" Alias "lcOnEventEntScale" (pFunc As F_ENTSCALE)

  Public Declare Sub OnEventEntMirror Lib "Litecad.dll" Alias "lcOnEventEntMirror" (pFunc As F_ENTMIRROR)

  Public Declare Sub OnEventEntProp Lib "Litecad.dll" Alias "lcOnEventEntProp" (pFunc As F_ENTPROP)

  Public Declare Sub OnEventHelp Lib "Litecad.dll" Alias "lcOnEventHelp" (pFunc As F_HELP)

  Public Declare Sub OnEventAddStr Lib "Litecad.dll" Alias "lcOnEventAddStr" (pFunc As F_ADDSTR)

  Public Declare Sub OnEventFontReplace Lib "Litecad.dll" Alias "lcOnEventFontReplace" (pFunc As F_FONTREPLACE)


End Module
